# rainbowminer-api-client

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: binary.md  control.md  error-handling.md  monitoring.md  sync-async-parity.md
docs/reference/: client.md  errors.md  sync-client.md
docs/reference/models/: activity.md  balances.md  common.md  config.md  console.md  devices.md  miners.md  misc.md  mrr.md  pools.md
docs/stylesheets/: extra.css
overrides/: main.html
src/rainbowminer_api_client/: __init__.py  _http.py  client.py  errors.py  sync_client.py
src/rainbowminer_api_client/models/: __init__.py  _base.py  activity.py  balances.py  common.py  config.py  console.py  devices.py  miners.py  misc.py  mrr.py  pools.py  profit.py
tests/: conftest.py  fixture_registry.py  record_fixtures.py  test_binary.py  test_client.py  test_control.py  test_models.py  test_monitoring.py  test_replay_fixtures.py  test_smoke.py  test_sync_client.py
tests/fixtures/real/: README.md
