[project]
name = "rainbowminer-api-client"
dynamic = ["version"]
description = "A Python API Client for the RainbowMiner multipool cryptominer."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "El1t3Mult1pl3x0r", email = "55260508+El1t3Mult1pl3x0r@users.noreply.github.com" }
]
keywords = ["rainbowminer", "cryptominer", "mining", "api-client"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/El1t3Mult1pl3x0r/rainbowminer-api-client"
Repository = "https://github.com/El1t3Mult1pl3x0r/rainbowminer-api-client"
Issues = "https://github.com/El1t3Mult1pl3x0r/rainbowminer-api-client/issues"

[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.1.0"

[dependency-groups]
dev = [
    "pydoclint>=0.9.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python-version = "3.14"

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "warn"

[tool.pydoclint]
style = "google"
require-return-section-when-returning-nothing = false
require-yield-section-when-yielding-nothing = false
